Fix 1px overflow/line artifact in block-projects slider by removing margin-left: 1px from .swiper-wrapper
Agent-Logs-Url: https://github.com/imetko-leobit/Integrated-sustainability/sessions/a4f3de68-8851-4be4-8b99-8042933f3a39

--- a/assets/css/section-block_projects.css
+++ b/assets/css/section-block_projects.css
@@ -268,8 +268,7 @@
     -ms-flex-align: start;
     align-items: flex-start;
     height: 100%;
-    gap: 0;
-    margin-left: 1px; }
+    gap: 0; }
   .block-projects .swiper-slide {
     display: -webkit-box;
     display: -ms-flexbox;
